--- a/src/bin/Makefile.am
+++ b/src/bin/Makefile.am
@@ -1,4 +1,5 @@
 AM_CFLAGS = -I$(top_srcdir)/src/bin
 
-bin_PROGRAMS = wabclient
-wabclient_SOURCES = client.c client.h
+bin_PROGRAMS = wabclient wabserver
+wabclient_SOURCES = client.c client.h wab.h
+wabserver_SOURCES = server.c server.h wab.h
