--- a/configure.ac
+++ b/configure.ac
@@ -5,18 +5,20 @@ AC_PREREQ([2.69])
 AC_INIT([wastl-alert-broadcast], [1.0], [markus.duerauer@feuerwehr.gv.at])
 AC_CONFIG_SRCDIR([src/bin/client.c])
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE
 LT_INIT
 
 # Checks for programs.
 AC_PROG_CC
 AC_PROG_CPP
-AC_PROG_RANLIB
 
 # Use the C language and compiler for the following checks
 AC_LANG([C])
 
 # Checks for libraries.
+PKG_CHECK_MODULES([SQLITE3], [sqlite3], [have_libsqlite3=yes], [have_libsqlite3=no])
+AM_CONDITIONAL([LIB_SQLITE3],  [test "$have_libsqlite3" = "yes"])
 
 # Checks for header files.
 AC_HEADER_STDC
